--- a/Content/Resources/Stylesheets/myStyles.css
+++ b/Content/Resources/Stylesheets/myStyles.css
@@ -22,6 +22,11 @@ html.home-topic .main-section > .outer-row	/*Overrides padding set in the skin w
 	padding: 0;
 }
 
+.link-list-popup ul li:hover
+{
+	background-color: green;
+}
+
 h1
 {
 	font-weight: bold;
@@ -156,6 +161,7 @@ a:visited
 a:hover
 {
 	color: #076685;
+	background: #ad00ff;
 }
 
 a:active
@@ -191,7 +197,7 @@ div.topic-hero
 	padding: 5%;
 	background-image: url('../Images/Home/Hero-Background.jpg');
 	background-size: cover;
-	background-attachment: fixed;
+	/*background-attachment: fixed;*/
 }
 
 div.topic-hero h1
@@ -234,14 +240,18 @@ div.home-tiles > div
 
 div.home-tiles > div:nth-child(1)
 {
-	width: 30%;
-	margin-left: 19%;
+	width: 83.333%;
+	margin-left: 16.667%;
+	background-image: url('../Images/Home/Hero-Background.jpg');
+	background-size: cover;
 }
 
 div.home-tiles > div:nth-child(2)
 {
-	width: 30%;
-	margin-left: 2%;
+	background-image: url('../Images/Home/Hero-Background.jpg');
+	background-size: cover;
+	width: 83.333%;
+	margin-left: 0%;
 }
 
 div.article-tiles	/*This is a custom responsive layout row style (div class) in your stylesheet. To provide your own description for this style: (1) Open the stylesheet; (2) Find and select the div class with this name; and (3) In the Comment field, replace this text with your own. For more information on adding comments to styles, see the online Help.*/
@@ -387,6 +397,51 @@ p.footer-sub
 	padding-right: 10px;
 }
 
+MadCap|glossaryProxy
+{
+	color: #d10066;
+}
+
+.GlossaryPageLink
+{
+	color: red;
+	pointer-events: none;
+}
+
+table
+{
+	margin: auto;
+	color: blue;
+}
+
+MadCap|relatedTopicsControlList
+{
+	background: #ad00ff;
+}
+
+MadCap|relatedTopicsControlListItemLink
+{
+	background: #ad00ff;
+}
+
+MadCap|relatedTopicsControlListItem
+{
+	background: #ad00ff;
+}
+
+MadCap|relatedTopics
+{
+	background: #ad00ff;
+}
+
+div.home-tiles > div:nth-child(3)
+{
+	width: 8.3333%;
+	margin-left: 0%;
+	background-image: url('../Images/Home/Hero-Background.jpg');
+	background-size: cover;
+}
+
 @media print
 {
 	MadCap|xref
@@ -394,6 +449,11 @@ p.footer-sub
 		font-weight: normal;
 		mc-format: '{quote}{para}{quote} {pageref}';
 		text-decoration: none;
+	}
+
+	table
+	{
+		margin: auto;
 	}
 }
 
@@ -418,6 +478,12 @@ p.footer-sub
 	div.home-footer > div:nth-child(2)
 	{
 		width: 75%;
+		margin-left: 0%;
+	}
+
+	div.home-tiles > div:nth-child(3)
+	{
+		width: 8.3333%;
 		margin-left: 0%;
 	}
 }
@@ -513,6 +579,12 @@ p.footer-sub
 	{
 		width: 100%;
 		margin: 3% 0;
+	}
+
+	div.home-tiles > div:nth-child(3)
+	{
+		width: 8.3333%;
+		margin-left: 0%;
 	}
 }
 
